new hw templates

--- a/template_language/homework/fareniuk/templates/home.html
+++ b/template_language/homework/fareniuk/templates/home.html
@@ -1,5 +1,7 @@
 {#  Inherit from layout #}
-
+{% extends "layout.html" %}
+{% block title %}{{title}}{% endblock %}
+{% block content %}
 <main role="main" class="inner cover my-auto text-center">
     <h1 class="cover-heading">Top of IMDb.</h1>
     <p class="lead">
@@ -7,11 +9,12 @@
         <a href="https://www.imdb.com/">Internet Movie Database</a>.
     </p>
     <p class="lead mt-5">
-        <a href="/movies" class="btn btn-lg btn-primary">Go to movies list</a>
+        <a href="{{ url_for('movies_page')}}" class="btn btn-lg btn-primary">Go to movies list</a>
     </p>
 </main>
 <footer class="mastfoot mt-auto text-center">
     <div class="inner">
-        <p>Made by Eugene Zabolotny.</p>
+        <p>{{ author }}</p>
     </div>
 </footer>
+{% endblock %}
